# stockpot

./: .gitignore  1  ANALYSIS_REPORT.md  CHANGELOG.md  Cargo.toml  ISSUE.md  MEMORY_USAGE_BREAKDOWN.md  PERFORMANCE_ANALYSIS.md  README.md  comprehensive_markdown_test.md  markdown-test.md  markdown_showcase.md  markdown_test_samples.md  memory_analysis.py  models.conf  process_comparison.md  tagesschau_summary.md
.github/workflows/: ci.yml  release.yml
crates/spot-auth/: Cargo.toml
crates/spot-auth/src/: chatgpt.rs  claude_code.rs  google.rs  lib.rs  storage.rs
crates/spot-core/: Cargo.toml  README.md
crates/spot-core/src/: display_detect.rs  lib.rs  metrics.rs  runner.rs  test_utils.rs  version_check.rs
crates/spot-core/src/agents/: agent_tools.rs  base.rs  json_agent.rs  manager.rs  mod.rs
crates/spot-core/src/agents/builtin/: code_agent.rs  mod.rs  planning.rs  spot.rs
crates/spot-core/src/agents/builtin/prompts/: code_agent.md  code_reviewer.md  planning.md  spot.md
crates/spot-core/src/agents/executor/: mod.rs  resilience.rs  streaming.rs  types.rs
crates/spot-core/src/auth/: chatgpt.rs  claude_code.rs  google.rs
crates/spot-core/src/config/: compression.rs  keys.rs  logging.rs  mod.rs  settings.rs  typed_config.rs  vdi.rs
crates/spot-core/src/db/: migrations.rs  mod.rs
crates/spot-core/src/db/repositories/: api_keys.rs  key_pool.rs  mod.rs
crates/spot-core/src/mcp/: config.rs  manager.rs  mod.rs
crates/spot-core/src/messaging/: bus.rs  event_bridge.rs  mod.rs  types.rs
crates/spot-core/src/models/: add_model.rs  defaults.rs  mod.rs  model_config.rs  registry.rs
crates/spot-core/src/plugins/: json_plugin.rs  manager.rs  mod.rs
crates/spot-core/src/session/: mod.rs
crates/spot-core/src/terminal/: instance.rs  pty.rs  security.rs
crates/spot-core/src/tools/: agent_tools.rs  delete_file_tool.rs  file_ops.rs  grep_tool.rs  kill_process_tool.rs  mod.rs  registry.rs  shell_tool.rs
crates/spot-gui/: Cargo.toml
crates/spot-models/: Cargo.toml  build.rs
crates/spot-models/src/: add_model.rs  key_pool.rs  lib.rs  registry.rs  settings.rs  utils.rs
crates/spot-models/tests/: integration_tests.rs
crates/spot-storage/: Cargo.toml
crates/spot-storage/src/: lib.rs
crates/spot-storage/src/repositories/: key_pool.rs  settings.rs
crates/spot-storage/tests/: integration_tests.rs
crates/spot-tools/: Cargo.toml
crates/spot-tools/src/: lib.rs
crates/spot-tools/src/terminal/: mod.rs  types.rs
crates/spot-tools/src/tools/: diff.rs  edit_file_tool.rs  grep_tool.rs  mod.rs  read_file_tool.rs  registry.rs  shell.rs  shell_tool.rs
crates/spot-tools/tests/: integration_tests.rs
crates/spot-tui/: Cargo.toml  README.md
crates/stockpot-core/: Cargo.toml  README.md  build.rs
crates/stockpot-core/src/: display_detect.rs  lib.rs
crates/stockpot-core/src/agents/: mod.rs
crates/stockpot-core/src/agents/builtin/: explore.rs  planning.rs  reviewers.rs  stockpot.rs
crates/stockpot-core/src/agents/builtin/prompts/: planning.md  stockpot.md
crates/stockpot-core/src/agents/executor/: model_factory.rs  streaming.rs
crates/stockpot-core/src/auth/: chatgpt.rs  claude_code.rs  google.rs  mod.rs
crates/stockpot-core/src/config/: mod.rs  settings.rs
crates/stockpot-core/src/db/: mod.rs
crates/stockpot-core/src/db/sql/: 001_initial.sql  006_api_key_pools.sql
crates/stockpot-core/src/mcp/: mod.rs
crates/stockpot-core/src/messaging/: mod.rs
crates/stockpot-core/src/models/: catalog.rs  types.rs
crates/stockpot-core/src/session/: mod.rs
crates/stockpot-core/src/terminal/: store.rs  types.rs
crates/stockpot-core/src/tools/: agent_tools.rs  common.rs  delete_file_tool.rs  edit_file_tool.rs  grep_tool.rs  kill_process_tool.rs  list_files_tool.rs  list_processes_tool.rs  mod.rs  read_file_tool.rs  read_process_output_tool.rs  registry.rs  shell_tool.rs  tool_context.rs
crates/stockpot-gui/: Cargo.toml
crates/stockpot-gui/src/: lib.rs
crates/stockpot-gui/src/gui/: app.rs  mod.rs  render_test.rs  run.rs  theme.rs
crates/stockpot-gui/src/gui/app/: execution.rs  messages.rs  metrics.rs  model_dropdown.rs  model_management.rs  streaming.rs  system_executions.rs  toolbar.rs
crates/stockpot-gui/src/gui/app/settings/: dialogs.rs  general.rs  pinned_agents.rs
crates/stockpot-gui/src/gui/app/settings/mcp_servers/: agent_assignments.rs  mod.rs  server_list.rs
crates/stockpot-gui/src/gui/app/settings/models/: config_panel.rs  mod.rs  provider_list.rs
crates/stockpot-gui/src/gui/components/: collapsible.rs  message.rs  mod.rs  radio_group.rs  scrollbar.rs  selectable_list_item.rs  settings_row.rs  terminal_view.rs  toggle.rs  toolbar.rs
crates/stockpot-tui/: Cargo.toml  README.md
crates/stockpot-tui/src/: lib.rs
crates/stockpot-tui/src/tui/: app.rs  event.rs  execution.rs  hit_test.rs  markdown.rs  mod.rs  run.rs  theme.rs  ui.rs
crates/stockpot-tui/src/tui/activity/: converter.rs  mod.rs  types.rs
crates/stockpot-tui/src/tui/settings/: api_keys.rs  general.rs  mcp_servers.rs  mod.rs  models.rs  pinned_agents.rs
crates/stockpot-tui/src/tui/widgets/: dropdown.rs  messages.rs  metrics.rs  mod.rs
src/: display_detect.rs  lib.rs  main.rs  runner.rs  tokens.rs
src/agents/: base.rs  executor.rs  json_agent.rs  manager.rs  mod.rs
src/auth/: chatgpt.rs  claude_code.rs  google.rs  mod.rs  storage.rs
src/cli/: add_model.rs  bridge.rs  completion_reedline.rs  mod.rs  model_picker.rs  repl.rs  runner.rs  streaming_markdown.rs
src/config/: mod.rs  settings.rs  xdg.rs
src/db/: migrations.rs  mod.rs  schema.rs  session_repository.rs
src/gui/: app.rs  mod.rs  pdf_processing.rs  theme.rs  zed_globals.rs
src/mcp/: config.rs  manager.rs  mod.rs
src/messaging/: bus.rs  event_bridge.rs  mod.rs  renderer.rs  spinner.rs  types.rs
src/models/: add_model.rs  config.rs  defaults.rs  key_pool.rs  mod.rs  registry.rs  settings.rs  types.rs  utils.rs
src/session/: mod.rs
src/terminal/: instance.rs  pty.rs  store.rs
src/tools/: agent_tools.rs  common.rs  delete_file_tool.rs  diff.rs  edit_file_tool.rs  file_ops.rs  grep_tool.rs  (+9 more)
(+191 files in other folders)
