[workspace]
members = [
    "crates/stockpot-core",
    "crates/stockpot-tui",
    "crates/stockpot-gui",
]
resolver = "2"

[package]
name = "stockpot"
version = "0.23.1"
edition = "2021"
description = "AI-powered coding assistant with native GUI"
license = "MIT"
authors = ["Stockpot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "gui", "coding", "assistant", "llm"]
categories = ["development-tools", "gui"]
publish = false  # Cannot publish: depends on stockpot-gui which has git deps

[[bin]]
name = "spot"
path = "src/bin/spot.rs"

[dependencies]
stockpot-core = { path = "crates/stockpot-core", version = "0.23.1" }
stockpot-tui = { path = "crates/stockpot-tui", version = "0.23.1", optional = true }
stockpot-gui = { path = "crates/stockpot-gui", version = "0.23.1", optional = true }

# Needed for spot.rs binary
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3"

[features]
default = ["gui", "tui"]
gui = ["dep:stockpot-gui"]
tui = ["dep:stockpot-tui"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Pin zbus to avoid ashpd 0.12.0 compilation failure (zvariant_derive 5.9.0 breaking change)
# See: https://github.com/bilelmoussaoui/ashpd/issues/323
# Using zvariant-5.8.0 tag (before the breaking change)
[patch.crates-io]
# Pin core-text to 21.0.0 to use core-graphics 0.24 (21.1.0 uses 0.25 which conflicts with zed-font-kit)
core-text = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }

# Pin zbus to avoid ashpd 0.12.0 compilation failure (zvariant_derive 5.9.0 breaking change)
# See: https://github.com/bilelmoussaoui/ashpd/issues/323
# Using zvariant-5.8.0 tag (before the breaking change)
zbus = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zvariant = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zvariant_derive = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zvariant_utils = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zbus_names = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zbus_macros = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }