[package]
name = "spot-core"
version = "0.25.1"
edition = "2021"
description = "Core library for Spot precision computer control system"
license = "MIT"
authors = ["Spot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "coding", "assistant", "llm", "tools"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# Workspace crates
spot-storage = { path = "../spot-storage" }
spot-models = { path = "../spot-models" }
spot-auth = { path = "../spot-auth" }
spot-tools = { path = "../spot-tools" }

# SerdesAI
serdes-ai-core = "0.2.6"
serdes-ai-agent = { version = "0.2.6", features = ["tracing-integration"] }
serdes-ai-models = { version = "0.2.6", features = ["full", "chatgpt-oauth", "claude-code-oauth", "antigravity"] }
serdes-ai-tools = "0.2.6"
serdes-ai-mcp = "0.2.6"

# Core
nu-ansi-term = "0.50"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
