[package]
name = "stockpot-core"
version = "0.23.2"
edition = "2021"
description = "Core library for Stockpot AI coding assistant"
license = "MIT"
authors = ["Stockpot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "coding", "assistant", "llm", "tools"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# SerdesAI
serdes-ai = { version = "0.1.3", features = ["full"] }
serdes-ai-core = "0.1.3"
serdes-ai-agent = { version = "0.1.3", features = ["tracing-integration"] }
serdes-ai-models = { version = "0.1.3", features = ["full", "chatgpt-oauth", "claude-code-oauth", "antigravity"] }
serdes-ai-providers = { version = "0.1.4", features = ["full"] }
serdes-ai-tools = "0.1.3"
serdes-ai-mcp = "0.1.3"

# Markdown
streamdown-parser = "0.1.4"
streamdown-render = "0.1.4"
streamdown-config = "0.1.4"
pulldown-cmark = "0.10"

# Core
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
nu-ansi-term = "0.50"
crossterm = "0.28"
syntect = "5.2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
which = "6.0"
regex = "1.10"
glob = "0.3"
semver = "1.0"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
unicode-width = "0.2.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Base64 & text
base64 = "0.22"
textwrap = "0.16"

# Browser
webbrowser = "1.0"

# Shell
shellexpand = "3.1"

# Terminal emulation
portable-pty = "0.8"
alacritty_terminal = "0.24"
parking_lot = "0.12"
strip-ansi-escapes = "0.2"

[target.'cfg(unix)'.dependencies]
mupdf = { version = "0.5", default-features = false }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
