[package]
name = "stockpot-gui"
version = "0.23.4"
edition = "2021"
description = "GUI for Stockpot AI coding assistant"
license = "MIT"
authors = ["Stockpot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "coding", "assistant", "gui"]
categories = ["development-tools", "gui"]
publish = false  # Cannot publish due to git dependencies

[[bin]]
name = "spot-gui"
path = "src/bin/spot_gui.rs"

[dependencies]
stockpot-core = { path = "../stockpot-core", version = "0.23.4" }

# SerdesAI (re-exported types needed directly)
serdes-ai-core = "0.1.3"

# Terminal emulation (used directly in GUI)
alacritty_terminal = "0.24"
parking_lot = "0.12"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"

# Syntax highlighting
syntect = "5.2"

# GUI (git dependencies - not publishable to crates.io)
gpui = { git = "https://github.com/zed-industries/zed", rev = "cff3ac6f93f506330034652f0d2389591bfb45a0", package = "gpui" }
gpui-component = { git = "https://github.com/janfeddersen-wq/gpui-component", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/janfeddersen-wq/gpui-component" }
rfd = "0.14"
unicode-segmentation = "1.11"
open = "5"

# Re-export common deps
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
image = "0.25"

# Markdown
streamdown-parser = "0.1.4"
streamdown-render = "0.1.4"
streamdown-config = "0.1.4"
pulldown-cmark = "0.10"

[target.'cfg(unix)'.dependencies]
mupdf = { version = "0.5", default-features = false }