[package]
name = "stockpot-tui"
version = "0.23.3"
edition = "2021"
description = "Terminal UI for Stockpot AI coding assistant"
license = "MIT"
authors = ["Stockpot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "coding", "assistant", "tui", "terminal"]
categories = ["development-tools", "command-line-interface"]
readme = "README.md"

[[bin]]
name = "spot-cli"
path = "src/bin/spot_cli.rs"

[dependencies]
stockpot-core = { path = "../stockpot-core", version = "0.23.3" }

# SerdesAI (re-exported types needed directly)
serdes-ai-core = "0.1.3"

# TUI
ratatui = "0.29"
arboard = "3.4"
tui-textarea = "0.7"
crossterm = "0.28"

# Utilities needed by TUI
dirs = "5.0"
textwrap = "0.16"

# Re-export common deps used by TUI
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
unicode-width = "0.2.0"

# Markdown rendering
streamdown-parser = "0.1.4"
streamdown-render = "0.1.4"
streamdown-config = "0.1.4"